@startuml

title __UTIL's Class Diagram__\n

  namespace com.lobby.util {
    class com.lobby.util.ImageUtil {
        {static} + decodedImage : Image
        {static} + height : double
        {static} + width : double
        + ImageUtil()
        {static} + imageDecode()
        {static} + imageEncode()
        {static} - scale()
    }
  }
  

  namespace com.lobby.util {
    class com.lobby.util.ResizeHelper {
        {static} + addListenerDeeply()
        {static} + addResizeListener()
    }
  }
  

  namespace com.lobby.util {
    class com.lobby.util.ResizeHelper.ResizeListener {
        - border : int
        - cursorEvent : Cursor
        - stage : Stage
        - startX : double
        - startY : double
        + ResizeListener()
        + handle()
    }
  }
  

  namespace com.lobby.util {
    class com.lobby.util.VoicePlayback {
        {static} + playAudio()
    }
  }
  

  namespace com.lobby.util {
    class com.lobby.util.VoiceRecorder {
        {static} + captureAudio()
    }
  }
  

  namespace com.lobby.util {
    class com.lobby.util.VoiceUtil {
        {static} # isRecording : boolean
        {static} ~ out : ByteArrayOutputStream
        {static} + isRecording()
        {static} + setRecording()
        {static} ~ getAudioFormat()
    }
  }
  

  com.lobby.util.ResizeHelper +-down- com.lobby.util.ResizeHelper.ResizeListener
  com.lobby.util.ResizeHelper.ResizeListener .up.|> javafx.event.EventHandler
  com.lobby.util.VoicePlayback -up-|> com.lobby.util.VoiceUtil
  com.lobby.util.VoiceRecorder -up-|> com.lobby.util.VoiceUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
